[package]
name = "rust_ring_signature"
version = "0.1.0"
authors = ["Andrea Di Franco <difranco.developer@gmail.com"]
description = "Compact Linkable Spontaneous Anonymous Group ring signature for Rust"
license = "BSD-3-Clause"
repository = "https://github.com/andredif/rust_ring_signature"
edition = "2023"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
curve25519-dalek = { version = "1.2.3", features = ["serde"] }
rand = "0.6.0"
sha2 = "0.8"
merlin = "1.2.0"
serde = {version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
serde_with = "2.3.2"
bincode = "1.3.3"
base64 = "0.13.0"
