[package]
name = "rust_ring_signature"
version = "0.1.0"
authors = ["Andrea Di Franco <difranco.developer@gmail.com"]
description = "Compact Linkable Spontaneous Anonymous Group ring signature for Rust"
license = "BSD-3-Clause"
repository = "https://github.com/andredif/rust_ring_signature"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ironcore-search-helpers = "0.1"
js-sys = "0.3"
rand = { version = "0.6.0", features = [ "wasm-bindgen" ] }
rand_chacha = "0.2"
recrypt = { version = "0.12", features = [ "wasm" ], default-features = false }
serde = "1"
serde_derive = "1"
wasm-bindgen = { version = "0.2", features = [ "serde-serialize" ] }
curve25519-dalek = { version = "1.2.3", features = ["serde"] }
sha2 = "0.8"
merlin = "1.2.0"
clear_on_drop = "0.2.4"
serde-wasm-bindgen = "0.4"
serde_json = "1.0.59"
serde_with = "2.3.2"
bincode = "1.3.3"
base64 = "0.13.0"


